test: add jacoco configuration